<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SVGActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="150dp"
            android:layout_height="24dp"
            android:background="@null"
            android:id="@+id/edit"
            android:hint="@string/cin"
            android:autofillHints="@string/keyframe"
            android:inputType="textFilter"
            android:layout_gravity="center"
            tools:targetApi="o" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="24dp"
            android:id="@+id/iv_anim"
            android:layout_gravity="center"
            android:contentDescription="@string/add" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>