<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_path"
        android:text="@string/path"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_property"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/property"
        app:layout_constraintBottom_toTopOf="@+id/btn_path"
        app:layout_constraintEnd_toEndOf="@+id/btn_path"
        app:layout_constraintStart_toStartOf="@+id/btn_path"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_viewgroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewpager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_property"
        app:layout_constraintStart_toStartOf="@+id/btn_property"
        app:layout_constraintTop_toBottomOf="@+id/btn_path" />

    <Button
        android:id="@+id/btn_path_anim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay"
        app:layout_constraintBottom_toTopOf="@+id/btn_path"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_property" />

</androidx.constraintlayout.widget.ConstraintLayout>