<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PropertyActivity">

    <Button
        android:id="@+id/btn_start_property"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ofobject"
        app:layout_constraintEnd_toStartOf="@+id/btn_start_keyframe"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/btn_start_keyframe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keyframe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_start_property"
        app:layout_constraintTop_toTopOf="@+id/btn_start_property" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <com.example.view.myview.MyTextView
        android:id="@+id/ofobject"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="@+id/btn_start_property"
        app:layout_constraintStart_toStartOf="@+id/btn_start_property" />

    <ImageView
        android:id="@+id/iv_clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/clock"
        android:src="@drawable/clock"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="@+id/btn_start_keyframe"
        app:layout_constraintStart_toStartOf="@+id/btn_start_keyframe" />
</androidx.constraintlayout.widget.ConstraintLayout>